# bundestag-mining

./: .dockerignore  .gitignore  BRAINDUMP.md  Dockerfile  Parse_Stammdaten.ipynb  README.md  app.yaml  berufe_mapping.py  eda_berufe_embedding.ipynb  pyproject.toml  readme.txt  requirements.txt  setup.py
blog/: brainstorming.txt
blog/text_drafts/: 20210616_text_draft.txt  20210617_frau_in_der_it.txt  20210620_bundestagsmining.txt  20210621_bundestagsmining.txt  20210622_bundestagsmining.txt  2024_11_18_bundestagsmining.txt  2024_11_27_bundestagsmining.txt
dashboard/: abgeordneten-dashboard.py
data/: df_mdb.csv
data/2021/output/: df_mdb.csv  wp_startdaten.csv
data/2024/output/: df_mdb.csv  df_mdb_newest.csv  df_mdb_newest_sample_64.csv  df_mdb_sample.csv  wp_startdaten.csv
data/2025/output/: categories_metadata.json  df_mdb.csv  wp_startdaten.csv
docs/: aws_deployment.md  docker_guide.md  gcc_deployment.md  general_stuff.md
notebooks/: Parse_Stammdaten.ipynb  eda_berufe_embedding.ipynb
presentation/: 2025_09_25_THAugsburg_ProfRichard.html  2025_09_25_THAugsburg_ProfRichard.ipynb  README.md  custom.css
src/: berufe_mapping.py  config.py  debug_local.py  mapping_values.py  parse_data.py  visualization.py
